fix images too wide for viewport

--- a/_includes/styles/index.css
+++ b/_includes/styles/index.css
@@ -92,7 +92,7 @@ img {
     height: auto;
     width: auto;
 
-    @media only screen and (min-width: 800px) {
+    @media only screen and (min-width: 1000px) {
         max-width: 800px;
         max-height: 600px;
     }
